--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="main_header_store">Almacenadas</string>
     <string name="info_navegate_url">Esta saliendo a %s</string>
     <string name="login_error_message_signin">Login: %s</string>
+    <string name="btn.cancel">Cancelar</string>
 </resources>
